--- a/templates/CallSeniorDesigner.html
+++ b/templates/CallSeniorDesigner.html
@@ -88,7 +88,7 @@ color: #000;
 				<!-- ======================= Top Breadcrubms ======================== -->
 				<div class="videoDesigner">
 					<div class="videoBanner">
-                        <video muted autoplay loop>
+                        <video autoplay="" loop="" muted="" playsinline="">
                             <source src="{% static 'assets/img/newImages/CallDesigner/2.mp4' %}">
                         </video>
                     </div>
@@ -170,7 +170,7 @@ color: #000;
 																	<div class="col-lg-12">
 																		<div class="form-group">
 																			<label>Upload File</label>
-																			<input type="file" class="form-control" name="upload_file" accept=".pdf,.doc,.docx,.png,.jpg,.jpeg" placeholder="Subject" required>
+																			<input type="file" class="form-control" multiple name="upload_file" accept=".pdf,.doc,.docx,.png,.jpg,.jpeg" placeholder="Subject" required>
 																		</div>
 																	</div>
 																	<div class="col-lg-12">
