--- a/templates/callEpertTwo.html
+++ b/templates/callEpertTwo.html
@@ -88,7 +88,7 @@ color: #000;
 				<!-- ======================= Top Breadcrubms ======================== -->
 				<div class="videoDesigner">
 					<div class="videoBanner">
-                        <video muted autoplay loop>
+                        <video autoplay="" loop="" muted="" playsinline="">
                             <source src="{% static 'assets/img/newImages/CallDesigner/11.mp4' %}">
                         </video>
                     </div>
@@ -174,7 +174,7 @@ color: #000;
 																	<div class="col-lg-12">
 																		<div class="form-group">
 																			<label>Upload File</label>
-																			<input type="file" class="form-control"  name="upload_file" placeholder="Subject" required>
+																			<input type="file" multiple class="form-control"  name="upload_file" placeholder="Subject" required>
 																		</div>
 																	</div>
 																	<div class="col-lg-12">
