--- a/templates/products.html
+++ b/templates/products.html
@@ -226,7 +226,7 @@
                                                 <div class="text-center">
                                                     <h5 class="fw-bolder fs-md mb-0 lh-1 mb-1"><a href="#">{{product.name}}</a></h5>
                                                     {% comment %} description {% endcomment %}
-                                                    <p class="lead">{{product.description}}</p>
+                                                    <!-- <p class="lead">{{product.description}}</p> -->
                                                 </div>
                                             </div>
                                         </div>
@@ -290,7 +290,7 @@
                                                 <div class="text-left">
                                                     <div class="text-center">
                                                         <h5 class="fw-bolder fs-md mb-0 lh-1 mb-1"><a href="#">${product.name}</a></h5>
-                                                        <p class="lead">${product.description}</p>
+                                                        
                                                     </div>
                                                 </div>
                                             </div>
@@ -350,7 +350,7 @@
                                                 <div class="text-left">
                                                     <div class="text-center">
                                                         <h5 class="fw-bolder fs-md mb-0 lh-1 mb-1"><a href="#">${product.name}</a></h5>
-                                                        <p class="lead">${product.description}</p>
+                                                        
                                                     </div>
                                                 </div>
                                             </div>
@@ -410,7 +410,7 @@
                                                 <div class="text-left">
                                                     <div class="text-center">
                                                         <h5 class="fw-bolder fs-md mb-0 lh-1 mb-1"><a href="#">${product.name}</a></h5>
-                                                        <p class="lead">${product.description}</p>
+                                                       
                                                     </div>
                                                 </div>
                                             </div>
@@ -470,7 +470,7 @@
                                                 <div class="text-left">
                                                     <div class="text-center">
                                                         <h5 class="fw-bolder fs-md mb-0 lh-1 mb-1"><a href="#">${product.name}</a></h5>
-                                                        <p class="lead">${product.description}</p>
+                                                        
                                                     </div>
                                                 </div>
                                             </div>
