--- a/templates/base.html
+++ b/templates/base.html
@@ -150,11 +150,15 @@
 									<img src="{% static 'assets/img/newImages/new1/logo.png' %}" class="img-footer small mb-2" alt="" />
 									
 									<div class="address mt-3">
-										3298 Grant Street Longview, TX<br>United Kingdom 75601	
+										Uhaul offices <br>
+										24540 i-45 <br>
+										C004<br>
+										Spring, TX, 77386	
 									</div>
 									<div class="address mt-3">
-										1-202-555-0106<br>help@shopper.com
+										+1-(832) 800-4025
 									</div>
+
 									<div class="address mt-3">
 										<ul class="list-inline">
 											<li class="list-inline-item"><a href="#"><i class="lni lni-facebook-filled"></i></a></li>
