--- a/templates/custom.html
+++ b/templates/custom.html
@@ -2976,7 +2976,7 @@
       var products = JSON.parse("{{ products_json|escapejs }}");
       var sizes = JSON.parse("{{ sizes_json|escapejs }}");
     </script>
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script src="{% static 'assets/js/customDesign.js' %}"></script>
     <script src="{% static 'assets/js/newcustom.js' %}"></script>
 
