--- a/templates/ChooseDesigner.html
+++ b/templates/ChooseDesigner.html
@@ -29,11 +29,11 @@
                             <div class="chosedesinerBox">
 								<a href="{% url 'call_expert:callEpertTwo' %}">
 								<div class="titile">
-									<h2> Call A Designer</h2>
+									<h2> "Connect with Design Experts! Let's Elevate Your Team's Creativity!" </h2>
 								</div>
 								<div class="boxoxoBody">
 									<div class="descriptionPara">
-										<p >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+										<p >Need Quick Advice? Schedule a 10-minute conference call on the fly.</p>
 									</div>
 									
 								</div>
@@ -44,11 +44,11 @@
                             <div class="chosedesinerBox">
 								<a href="{% url 'call_expert:call_senior_designer' %}">
 								<div class="titile">
-									<h2>Call Expert Designer</h2>
+									<h2>"Connect with Design Experts! Let's Elevate Your Team's Creativity!" </h2>
 								</div>
 								<div class="boxoxoBody">
 									<div class="descriptionPara">
-										<p >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+										<p >For Deeper Insights, Dive into a 1-hour session with our Expert Designers.</p>
 									</div>
 									
 								</div>
