--- a/templates/PosterAndBanners.html
+++ b/templates/PosterAndBanners.html
@@ -27,9 +27,9 @@
 			<div class="BannerAndBosterMockup">
 				<div class="container">
 					<div class="titileDescr">
-						<h2>Add Your Post Or Banner</h2>
+						<h2>Do you have a specific theme, purpose, or content for the poster in mind?</h2>
 						<div class="descriptionPara">
-							<p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+							<p class="">Knowing this will help in creating a design that suits your needs. Lamination - Protect with a durable layer. Paper Type - Choose from glossy, matte & more. Orientation - Portrait or landscape? Size - A3, A2, A1, or custom dimensions. Mounting - Select your preferred option. Quantity - Specify the number needed. Upload Your Design - Ready to print!"</p>
 						</div>
 					</div>
 					<div class="row">
