--- a/templates/base.html
+++ b/templates/base.html
@@ -77,9 +77,12 @@
 							<ul class="nav-menu">
 							     <li><a href="{% url 'home:home' %}">Home</a></li>
 								<li><a href="{% url 'product:self_customization' %}">Customization</a></li>
-								<li><a href="{% url 'banner_and_posters:banner_and_posters' %}">Signs and posters</a></li>
+								<li><a>Posters Comming Soon</a></li>
+
+								<!-- <li><a href="{% url 'banner_and_posters:banner_and_posters' %}">Signs and posters</a></li> -->
+								
 								<li><a href="{% url 'call_expert:call_expert' %}">Call A Designer</a></li>
-								<li><a href="{% url 'product:ordaring' %}">Ordring</a></li>	
+								<li><a href="{% url 'product:ordaring' %}">Ordering</a></li>	
 								<li><a href="{% url 'contact_us:contact_us' %}">Contact</a></li>	
 
 							</ul>
@@ -153,10 +156,10 @@
 										Uhaul offices <br>
 										24540 i-45 <br>
 										C004<br>
-										Spring, TX, 77386	
+										Spring, TX, 77386	
 									</div>
 									<div class="address mt-3">
-										+1-(832) 800-4025
+										+1-(832) 800-4025
 									</div>
 
 									<div class="address mt-3">
@@ -179,7 +182,7 @@
 									<li><a href="#">Self Custmization</a></li>
 									<li><a href="#">Poster And Banners</a></li>
 									<li><a href="#">Call Design</a></li>
-									<li><a href="#">Ordaring</a></li>
+									<li><a href="#">Ordering</a></li>
 								  </ul>
 								</div>
 							  </div>
