--- a/templates/custom.html
+++ b/templates/custom.html
@@ -99,15 +99,13 @@
                     >Customization</a
                   >
                 </li>
-                <li>
-                  <a href="{% url 'banner_and_posters:banner_and_posters' %}"
-                    >Signs and posters</a
-                  >
-                </li>
+                <li><a>Posters Comming Soon</a></li>
+								<!-- <li><a href="{% url 'banner_and_posters:banner_and_posters' %}">Signs and posters</a></li> -->
                 <li>
                   <a href="{% url 'call_expert:call_expert' %}">Call A Designer</a>
                 </li>
-                <li><a href="{% url 'product:ordaring' %}">Ordring</a></li>
+                <li><a href="{% url 'product:ordaring' %}">Ordering</a></li>	
+								<li><a href="{% url 'contact_us:contact_us' %}">Contact</a></li>
               </ul>
 
               <ul class="nav-menu nav-menu-social align-to-right">
@@ -2749,7 +2747,7 @@
             <div class="row">
             <div class="col-lg-12 col-md-12">
               <div class="mediaProductionDescriptuion">
-                <h1>Delivary and hipping and pickup is avilabel</h1>
+                <h1>Delivery, Shipping and pickup are available</h1>
               </div>
             </div>
             
