--- a/templates/custom.html
+++ b/templates/custom.html
@@ -1953,11 +1953,14 @@
                   />
 
                   <div class="address mt-3">
-                    3298 Grant Street Longview, TX<br />United Kingdom 75601
-                  </div>
-                  <div class="address mt-3">
-                    1-202-555-0106<br />help@shopper.com
-                  </div>
+										Uhaul offices <br>
+										24540 i-45 <br>
+										C004<br>
+										Spring, TX, 77386	
+									</div>
+									<div class="address mt-3">
+										+1-(832) 800-4025
+									</div>
                   <div class="address mt-3">
                     <ul class="list-inline">
                       <li class="list-inline-item">
@@ -2061,9 +2064,7 @@
           <div class="container">
             <div class="row align-items-center">
               <div class="col-lg-12 col-md-12 text-center">
-                <p class="mb-0">
-                  © 2023 . Designd By <a href="#">IKE Print</a>.
-                </p>
+                <p class="mb-0">© 2023 . Furydgp All Right Resived.</p>
               </div>
             </div>
           </div>
